--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://messenger:messenger@cluster0.qqwjudn.mongodb.net/test"
+
+NEXTAUTH_SECRET= "NEXTAUTH_SECRET"
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
