--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ DATABASE_URL="mongodb+srv://messenger:messenger@cluster0.qqwjudn.mongodb.net/tes
 
 NEXTAUTH_SECRET= "NEXTAUTH_SECRET"
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=73434374585-rq7lsdsttea81io5m1pclj7duckckk72.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
