--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ NEXTAUTH_SECRET= "NEXTAUTH_SECRET"
 
 GOOGLE_CLIENT_ID=73434374585-rq7lsdsttea81io5m1pclj7duckckk72.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME= djwsbzkpp
